# pushuppal

./: .gitmodules  PushUpPal.djinni  PushUpPal.yaml  README.md  run_djinni.sh
android/PushUpPal/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/PushUpPal/app/src/androidTest/java/pl/ekk/mkk/pushuppal/: ExampleInstrumentedTest.java
android/PushUpPal/app/src/main/: AndroidManifest.xml  jniLibs
android/PushUpPal/app/src/main/java/pl/ekk/mkk/pushuppal/: MainActivity.kt  ResourcePathAccessor.kt
android/PushUpPal/app/src/main/res/layout/: activity_main.xml
android/PushUpPal/app/src/main/res/values/: colors.xml  strings.xml
android/PushUpPal/app/src/test/java/pl/ekk/mkk/pushuppal/: ExampleUnitTest.java
android/PushUpPal/gradle/wrapper/: gradle-wrapper.properties
android/PushUpPal/openCVLibrary330/: build.gradle
native/PushUpPal/glue-code/jni/: NativeMat.cpp  NativeMat.hpp
native/PushUpPal/glue-code/objc/: OpenCvMat+Private.h  OpenCvMat+Private.mm  OpenCvMat.h  OpenCvMat.m
native/PushUpPal/src/: ConditionsObserver.h  FaceRecognitionAndOpticalFlowBasedPushUpDetector.cpp  FaceRecognitionAndOpticalFlowBasedPushUpDetector.h  PushUpPalAppImpl.cpp  TimeSerie.h
